--- a/css/styles.css
+++ b/css/styles.css
@@ -1,192 +1,277 @@
 /* Объявим переменные */
 :root {
-    /* text clrs */
---main-clr: #2196F3;
---title-color: #212121;
---text-color: #757575;
---foot-adress: rgba(255, 255, 255, 0.6);
---white-clr: white;
-    /* bg clrs */
---bg-clr-main: #2F303A;
---bg-clr-secondary: #F5F4FA;
-    /* others */
---hover-btn: #188CE8; 
---box-height: 1.16;
---ltr-spasing: 0.03em;
+  /* text clrs */
+  --main-clr: #2196f3;
+  --title-color: #212121;
+  --text-color: #757575;
+  --foot-adress: rgba(255, 255, 255, 0.6);
+  --white-clr: white;
+  /* bg clrs */
+  --bg-clr-main: #2f303a;
+  --bg-clr-secondary: #f5f4fa;
+  /* others */
+  --hover-btn: #188ce8;
+  --frame-clr: #ececec;
+  --box-height: 1.16;
+  --ltr-spasing: 0.03em;
+  --indent: 30px;
 }
 
 /* глобальныe стилu */
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-
-    color: var(--text-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: var(--text-color);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 .nopoint {
-    list-style: none;
+  list-style: none;
 }
 /* link start */
 .link {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 .nav-link.link-active,
 .link:hover,
 .link:focus {
-    color: var(--main-clr);
+  color: var(--main-clr);
 }
 /* buttons start */
 .button {
-    font-family: inherit;
-    font-size: 16px;
-    font-weight: 500;
-    
-    cursor: pointer;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 4px;
+  border: none;
+
+  cursor: pointer;
 }
 .button:hover,
 .button:focus {
-    color: var(--white-clr);
-    background-color: var(--hover-btn);
+  color: var(--white-clr);
+  background-color: var(--hover-btn);
 }
 .btn-active {
-    color: var(--white-clr);
-    background-color: var(--main-clr);
+  color: var(--white-clr);
+  background-color: var(--main-clr);
 }
 .btn-passive {
-    color: var(--title-color);
-    background-color: var(--bg-clr-secondary);
+  color: var(--title-color);
+  background-color: var(--bg-clr-secondary);
 }
 /* buttons end */
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
-.title {    
-    color: var(--title-color);
+.title {
+  color: var(--title-color);
 }
 .logo {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: var(--ltr-spasing);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: var(--ltr-spasing);
 
-    color: var(--main-clr);
+  color: var(--main-clr);
 }
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
 
+  outline: 1px solid tomato;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+/* calc of margin for all cards */
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  margin: calc(var(--indent) / -2);
+}
+.card-set-item {
+  flex-basis: calc((100% - var(--items) * var(--indent)) / var(--items));
+  margin: calc(var(--indent) / 2);
+}
 /* локальные стили */
 
 /* header */
+
 .head-studio {
-    color: black;
+  color: black;
 }
 .nav-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: var(--box-height);
-    
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: var(--box-height);
+
+  letter-spacing: 0.02em;
+}
+.nav-link,
+.logo {
+  padding: 31px 0 33px 0;
+}
+.header-container,
+.header-nav,
+.main-nav,
+.contact-nav {
+  display: flex;
+}
+.main-nav-item:not(:last-child),
+.contact-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+.header-nav,
+.header-container {
+  align-items: center;
+}
+.logo {
+  margin-right: 93px;
+}
+.contact-nav {
+  margin-left: auto;
 }
 .main-nav-link {
-    color: var(--title-color);
+  color: var(--title-color);
 }
+.header {
+  border-bottom: 1px solid var(--frame-clr);
+}
+
 /* hero section */
 .hero {
-    background-color: var(--bg-clr-main);
+  text-align: center;
+
+  background-color: var(--bg-clr-main);
 }
 .hero-title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  margin-bottom: 40px;
 
-    color: var(--white-clr);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  color: var(--white-clr);
 }
 .hero-btn {
-    line-height: 1.88;
-    font-weight: 700;
-    letter-spacing: 0.06em;
+  padding: 10px 32px;
+
+  line-height: 1.88;
+  font-weight: 700;
+  letter-spacing: 0.06em;
 }
 /* qualities section */
 .title-qualities {
-    font-size: inherit;
-    line-height: var(--box-height);
-    letter-spacing: var(--ltr-spasing);
-    text-transform: uppercase;
+  margin-bottom: 10px;
+
+  font-size: inherit;
+  line-height: var(--box-height);
+  letter-spacing: var(--ltr-spasing);
+  text-transform: uppercase;
 }
 .text-qualities {
-    line-height: 1.71;
-    letter-spacing: var(--ltr-spasing);
+  line-height: 1.71;
+  letter-spacing: var(--ltr-spasing);
+}
+.qualities .card-set {
+  --items: 4;
+}
+.qualities {
+  padding-bottom: 0;
 }
 /* photos section */
-.photos > .title,
-.workers > .title {
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: var(--ltr-spasing);
+.photos .title,
+.workers .title {
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: var(--ltr-spasing);
+}
+.photos .card-set {
+  --items: 3;
 }
 /* workers section */
 .workers {
-    background-color: var(--bg-clr-secondary);
+  background-color: var(--bg-clr-secondary);
 }
 .card {
-    background-color: var(--white-clr);
-    text-align: center;
-    font-size: 16px;
-    line-height: var(--box-height);
-    letter-spacing: var(--ltr-spasing);
+  background-color: var(--white-clr);
+  text-align: center;
+  font-size: 16px;
+  line-height: var(--box-height);
+  letter-spacing: var(--ltr-spasing);
 }
 .name {
-    font-weight: 500;
-    font-size: inherit;
-    line-height: 1.19;
-    letter-spacing: var(--ltr-spasing);
+  font-weight: 500;
+  font-size: inherit;
+  line-height: 1.19;
+  letter-spacing: var(--ltr-spasing);
 }
 /* footer section */
 .footer {
-    background-color: var(--bg-clr-main);
+  background-color: var(--bg-clr-main);
 }
 .bottom-studio {
-    color: var(--white-clr);
+  color: var(--white-clr);
 }
 .contact-info {
-    font-style: inherit;
-    font-size: 14px;
-    line-height: 1.71;    
-    letter-spacing: var(--ltr-spasing);
+  font-style: inherit;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: var(--ltr-spasing);
 }
 .contact-address {
-    color: var(--white-clr);
+  color: var(--white-clr);
 }
 .contact-link {
-    color: var(--foot-adress);
+  color: var(--foot-adress);
 }
 
 /* END OF INDEX.HTML */
 
-
 /* START PORTFOLIO.HTML */
 
 .project-name {
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 .project-descrption {
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: var(--ltr-spasing);
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: var(--ltr-spasing);
 }
