--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ img {
   margin-left: auto;
   margin-right: auto;
 
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
 }
 .section {
   padding-top: 94px;
@@ -214,8 +214,10 @@ img {
   padding-bottom: 0;
 }
 /* photos section */
-.photos .title,
-.workers .title {
+.photos-title,
+.workers-title {
+  margin-bottom: 50px;
+
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
@@ -229,21 +231,42 @@ img {
   background-color: var(--bg-clr-secondary);
 }
 .card {
+  padding-bottom: 30px;
   background-color: var(--white-clr);
   text-align: center;
   font-size: 16px;
   line-height: var(--box-height);
   letter-spacing: var(--ltr-spasing);
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .name {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   font-weight: 500;
   font-size: inherit;
   line-height: 1.19;
   letter-spacing: var(--ltr-spasing);
 }
+.workers .card-set {
+  --items: 4;
+}
 /* footer section */
 .footer {
+  padding: 60px 0;
   background-color: var(--bg-clr-main);
+}
+.footer .logo {
+  display: inline-block;
+  margin-bottom: 20px;
+  margin-right: 0;
+  padding: 0;
+}
+.footer-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 .bottom-studio {
   color: var(--white-clr);
