--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,6 @@ img {
   background-color: var(--bg-clr-secondary);
 }
 .card {
-  padding-bottom: 30px;
   background-color: var(--white-clr);
   text-align: center;
   font-size: 16px;
@@ -243,13 +242,15 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 .name {
-  margin-top: 30px;
   margin-bottom: 10px;
 
   font-weight: 500;
   font-size: inherit;
   line-height: 1.19;
   letter-spacing: var(--ltr-spasing);
+}
+.card-name {
+  padding: 30px 0;
 }
 .workers .card-set {
   --items: 4;
